[package]
name = "lenra_cli"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "The Lenra command line interface"
repository = "https://github.com/lenra-io/lenra_cli"
keywords = ["cli", "lenra"]
categories = ["command-line-utilities"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
edition = "2021"
name = "lenra"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.2"
log = "0.4.17"
env_logger = "0.10.0"
regex = "1.6.0"
lazy_static = "1.4.0"
dofigen = "1.2.0"
docker-compose-types = "0.2.2"
open = "1"
rustyline = "10.0.0"
dirs = "4.0.0"
chrono = "0.4.22"
thiserror = "1.0.37"
colored = "2.0.0"
ureq = { version = "2.6.1", features = ["json"] }
tokio = { version = "1.23.0", features = ["full"] }
async-trait = "0.1.60"
