[package]
name = "lenra_cli"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "The Lenra command line interface"
repository = "https://github.com/lenra-io/lenra_cli"
keywords = ["cli", "lenra"]
categories = ["command-line-utilities"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
edition = "2021"
name = "lenra"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.19"
log = "0.4.20"
env_logger = "0.10.0"
regex = "1.8.2"
lazy_static = "1.4.0"
dofigen = "1.2.0"
docker-compose-types = "0.7.1"
rustyline = "10.1.0"
dirs = "5.0.0"
chrono = "0.4.24"
thiserror = "1.0.40"
colored = "2.0.0"
ureq = { version = "2.6.2", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
async-trait = "0.1.68"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
itertools = "0.12.0"
loading = "0.3.0"
pathdiff = "0.2.1"

[dev-dependencies]
mocktopus = "0.8.0"
rstest = "0.18.2"
